tests/snapshots/snapshots__settings.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Account settings operations (payment-config, contact-info, autofill, update-autofill)

Usage: flute2 settings [OPTIONS] <COMMAND>

Commands:
  payment-config   Show the account's payment configuration (GET /v2/settings/payment-config)
  contact-info     Show the account's contact information (GET /v2/settings/contact-information)
  autofill         Show the level 2 and level 3 autofill values (GET /v2/settings/transaction-autofill)
  update-autofill  Update the level 2 and level 3 autofill values (PATCH /v2/settings/transaction-autofill)
  help             Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

Global options:
      --profile <PROFILE>  Active profile (environment). `sandbox` (default) or `production`/`prod` [env: FLUTE2_PROFILE=]
      --output <OUTPUT>    Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table` [env: FLUTE2_OUTPUT=] [possible values: table, json, quiet]
      --debug              Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
