tests/snapshots/snapshots__settings_payment-config.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Show the account's payment configuration (GET /v2/settings/payment-config).

Processors, card types, tips and limits configured for the account.

Usage: flute2 settings payment-config [OPTIONS]

Options:
  -h, --help
          Print help (see a summary with '-h')

Global options:
      --profile <PROFILE>
          Active profile (environment). `sandbox` (default) or `production`/`prod`
          
          [env: FLUTE2_PROFILE=]

      --output <OUTPUT>
          Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table`
          
          [env: FLUTE2_OUTPUT=]
          [possible values: table, json, quiet]

      --debug
          Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
