tests/snapshots/snapshots__settings_update-autofill.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Update the level 2 and level 3 autofill values (PATCH /v2/settings/transaction-autofill)

Usage: flute2 settings update-autofill [OPTIONS]

Options:
      --l2-tax-rate <TAX_RATE>
          Default level-2 sales tax rate as a percentage, 0 to 22

      --l3-shipping-rate <SHIPPING_CHARGE_RATE>
          Default level-3 shipping charge **rate**, as a percentage

      --l3-duty-rate <DUTY_CHARGE_RATE>
          Default level-3 duty charge **rate**, as a percentage

      --product-name <PRODUCT_NAME>
          Default product name

      --product-code <CODE>
          Default product code

      --product-unit <MEASUREMENT_UNIT>
          Default unit of measurement, e.g. `EA`

      --product-unit-price <UNIT_PRICE>
          Default unit price

      --product-quantity <QUANTITY>
          Default quantity

      --product-discount <DISCOUNT_PERCENTAGE>
          Default product discount, as a percentage

      --clear <FIELD>
          Clear a stored default back to nothing. Repeat for several defaults.
          
          An empty value does the same: `--product-code ""` and `--clear product-code` are one request. `l2-tax-rate` cannot be cleared and is not offered.
          
          [possible values: l3-shipping-rate, l3-duty-rate, product-name, product-code, product-unit, product-unit-price, product-quantity, product-discount]

  -h, --help
          Print help (see a summary with '-h')

Global options:
      --profile <PROFILE>
          Active profile (environment). `sandbox` (default) or `production`/`prod`
          
          [env: FLUTE2_PROFILE=]

      --output <OUTPUT>
          Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table`
          
          [env: FLUTE2_OUTPUT=]
          [possible values: table, json, quiet]

      --debug
          Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
