tests/snapshots/snapshots__settlements.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Settlement batch operations (list, get, close)

Usage: flute2 settlements [OPTIONS] <COMMAND>

Commands:
  list   List settlement batches (GET /v2/settlements/batches)
  get    Fetch a single settlement batch by ID
  close  Settle the open batch for a payment processor (POST /v2/settlements/batches/close)
  help   Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

Global options:
      --profile <PROFILE>  Active profile (environment). `sandbox` (default) or `production`/`prod` [env: FLUTE2_PROFILE=]
      --output <OUTPUT>    Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table` [env: FLUTE2_OUTPUT=] [possible values: table, json, quiet]
      --debug              Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
