tests/snapshots/snapshots__settlements_get.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Fetch a single settlement batch by ID.

There is no single-batch endpoint. This reads the batch list under its own `batchIds` filter and returns the one match.

Usage: flute2 settlements get [OPTIONS] <BATCH_ID>

Arguments:
  <BATCH_ID>
          Settlement batch ID (positional)

Options:
  -h, --help
          Print help (see a summary with '-h')

Global options:
      --profile <PROFILE>
          Active profile (environment). `sandbox` (default) or `production`/`prod`
          
          [env: FLUTE2_PROFILE=]

      --output <OUTPUT>
          Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table`
          
          [env: FLUTE2_OUTPUT=]
          [possible values: table, json, quiet]

      --debug
          Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
