tests/snapshots/snapshots__settlements_list.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
List settlement batches (GET /v2/settlements/batches)

Usage: flute2 settlements list [OPTIONS]

Options:
      --page-index <PAGE_INDEX>
          Page number to fetch. Zero-based
      --page-size <PAGE_SIZE>
          Maximum results per page (1-100). Omit it to use the server's default
      --all
          Fetch every page until the collection is exhausted
      --sort-by <SORT_BY>
          Sort results by this field name
      --asc
          Sort ascending. The default here is descending
      --from <FROM_DATE>
          Filter results created from this date-time inclusive (ISO 8601)
      --to <TO_DATE>
          Filter results created up to this date-time inclusive (ISO 8601)
      --batch-ids <BATCH_ID>
          Filter by settlement batch ID. Repeat the flag for several batches
      --processor-ids <PAYMENT_PROCESSOR_ID>
          Filter by payment processor UUID. Repeat the flag for several processors
      --status <BATCH_STATUS>
          Filter results by status [possible values: open, pending-settlement, settled, declined]
  -h, --help
          Print help

Global options:
      --profile <PROFILE>  Active profile (environment). `sandbox` (default) or `production`/`prod` [env: FLUTE2_PROFILE=]
      --output <OUTPUT>    Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table` [env: FLUTE2_OUTPUT=] [possible values: table, json, quiet]
      --debug              Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
