tests/snapshots/snapshots__terminals_list.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
List terminals (GET /v2/terminals)

Usage: flute2 terminals list [OPTIONS]

Options:
      --page-index <PAGE_INDEX>         Page number to fetch. **Zero-based**
      --page-size <PAGE_SIZE>           Maximum results per page (1-100). Omit it to use the server's default
      --all                             Fetch every page until the collection is exhausted
      --sort-by <SORT_BY>               Sort results by this field name
      --asc                             Sort ascending
      --desc                            Sort descending
      --status <TERMINAL_STATUS>        Filter by readiness: `ready`, `busy` or `offline` [possible values: ready, busy, offline]
      --mode <TERMINAL_MODE>            Filter by mode: `standalone` or `semi-integrated` [possible values: standalone, semi-integrated]
      --connection <CONNECTION_STATUS>  Filter by line state: `online` or `offline` [possible values: online, offline]
      --serial-number <SERIAL_NUMBER>   Filter by serial number
      --search <SEARCH>                 Server-side text search
  -h, --help                            Print help

Global options:
      --profile <PROFILE>  Active profile (environment). `sandbox` (default) or `production`/`prod` [env: FLUTE2_PROFILE=]
      --output <OUTPUT>    Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table` [env: FLUTE2_OUTPUT=] [possible values: table, json, quiet]
      --debug              Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
